--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
       <div class="phone">
         <div class="phone-top-cutout"></div>
         <div class="phone-menu">
-          <div class="menu-back"></div>
+          <div class="menu-back"><</div>
           <img src="images/avatar.jpg" class="menu-avatar" alt="Samuel photo">
           <div class="contact-info">
             <p class="name">Samuel Green</p>
             <p class="role">Available to Walk</p>
           </div>
-          <div class="menu-more"></div>
+          <div class="menu-more">⋮</div>
         </div>
         <div class="chat-container">
           <div class="chat-user-1">That sounds great. I’d be happy with that.</div>
