--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 </head>
 
 <body>
-  <div class="background">
-    <div class="bg1"></div>
-    <div class="bg2"></div>
-  </div>
+
 
   <main>
+    <div class="background">
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+    </div>
     <div class="phone-container">
       <div class="walkingdog">
         <lottie-player src="images/walkingdog.json" background="transparent" speed="1" loop autoplay></lottie-player>
@@ -39,30 +40,31 @@
           <div class="menu-more">⋮</div>
         </div>
         <div class="chat-container">
-          <div class="chat-user-1">That sounds great. I’d be happy with that.</div>
-          <div class="chat-user-1">Could you send over some pictures of your dog, please?</div>
+          <div class="chat-user-1 phone-element">That sounds great. I’d be happy with that.</div>
+          <div class="chat-user-1 phone-element">Could you send over some pictures of your dog, please?</div>
           <div class="right-text">
-            <div class="chat-user-2-img">
+            <div class="chat-user-2-img phone-element">
               <img src="images/dog-image-1.jpg" alt="dog photo">
               <img src="images/dog-image-2.jpg" alt="dog photo">
               <img src="images/dog-image-3.jpg" alt="dog photo">
             </div>
           </div>
           <div class="right-text">
-            <div class="chat-user-2">Here are a few pictures. She’s a happy girl!</div>
+            <div class="chat-user-2 phone-element">Here are a few pictures. She’s a happy girl!</div>
           </div>
           <div class="right-text">
-            <div class="chat-user-2">Can you make it?</div>
+            <div class="chat-user-2 phone-element">Can you make it?</div>
           </div>
-          <div class="chat-user-1">She looks so happy! The time we discussed works. How long shall I take her out for?
+          <div class="chat-user-1 phone-element">She looks so happy! The time we discussed works. How long shall I take
+            her out for?
           </div>
-          <div class="chat-user-1-special">
+          <div class="chat-user-1-special phone-element">
             <div class="special-detail">
               <input type="radio" id="30min" name="walklength" value="30"><label for="30min">30 minute walk</label>
             </div>
             <div class="special-price">$29</div>
           </div>
-          <div class="chat-user-1-special">
+          <div class="chat-user-1-special phone-element">
             <div class="special-detail">
               <input type="radio" id="60min" name="walklength" value="60" onclick="walkingDog()"><label for="60min">1
                 hour walk</label>
@@ -72,7 +74,8 @@
         </div>
         <div class="send-message-container">
           <div class="send-message">Type a message…</div>
-          <div class="send-arrow" onkeydown="happyDog()" onclick="happyDog()" tabindex="0" aria-label="send message" role="button">
+          <div class="send-arrow" onkeydown="happyDog()" onclick="happyDog()" tabindex="0" aria-label="send message"
+            role="button">
             &gt;</div>
         </div>
       </div>
